@@ -9,6 +9,7 @@ libcm4all-was (0.8) unstable; urgency=low
   * simple: make file descriptors non-blocking
   * simple: check for control commands when I/O blocks
   * apreq: don't use undefined parameter for apr_bucket_alloc()
+  * apreq: fix multipart/form-data parser
   * convert to shared library
 
  --   
